--- a/nichole-portfolio/package.json
+++ b/nichole-portfolio/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://nholmstedt.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
