--- a/nichole-portfolio/package.json
+++ b/nichole-portfolio/package.json
@@ -10,8 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
-    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "pdfjs-dist": "^4.6.82",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.8",
     "gh-pages": "^6.1.1"
   }
 }
