--- a/nichole-portfolio/package.json
+++ b/nichole-portfolio/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://nholmstedt.github.io/portfolio",
   "private": true,
   "dependencies": {
-    "@react-pdf/renderer": "^3.4.5",
+    "@react-pdf/renderer": "^3.4.5[",
+    "@simplepdf/react-embed-pdf": "^1.8.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
